# web3-assistant-chat-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: agent.py  chroma_client.py  endpoints.py  gradio_app.py  settings.py
