[project]
name = "llm-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "fastapi>=0.115.12",
    "openai>=1.75.0",
    "openai-agents>=0.0.11",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.34.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
